--- a/index.html
+++ b/index.html
@@ -29,15 +29,29 @@
           </div>
           <div class="input">
             <label for="inputBookAuthor">Penulis</label>
-            <input id="inputBookAuthor" name="penulisBuku" type="text" required />
+            <input
+              id="inputBookAuthor"
+              name="penulisBuku"
+              type="text"
+              required
+            />
           </div>
           <div class="input">
             <label for="inputBookYear">Tahun</label>
-            <input id="inputBookYear" name="tahunTerbit" type="number" required />
+            <input
+              id="inputBookYear"
+              name="tahunTerbit"
+              type="number"
+              required
+            />
           </div>
           <div class="input_inline">
             <label for="inputBookIsComplete">Selesai dibaca</label>
-            <input id="inputBookIsComplete" name="keteranganBuku" type="checkbox" />
+            <input
+              id="inputBookIsComplete"
+              name="keteranganBuku"
+              type="checkbox"
+            />
           </div>
           <button id="bookSubmit" type="submit">
             Masukkan Buku ke rak <span>Belum selesai dibaca</span>
@@ -59,16 +73,17 @@
 
         <div id="incompleteBookshelfList" class="book_list">
           <article class="book_item" id="belumSelesaiBaca">
-                        <!-- <p id="idBelumSelesai">Id</p>
-                         <h3 id="judulBelumSelesai">Book Title</h3>
-                         <p id="penulisBelumSelesai">Penulis: John Doe</p>
-                         <p id="tahunBelumSelesai">Tahun: 2002</p> -->
+            <!-- <h3>Book Title</h3>
+            <p>Penulis: John Doe</p>
+            <p>Tahun: 2002</p> -->
 
-          <!--                <div class="action">-->
-          <!--                    <button class="green">Selesai dibaca</button>-->
-          <!--                    <button class="red">Hapus buku</button>-->
-          <!--                </div>-->
-          <!--            </article> -->
+            <div class="action">
+              <button class="green" id="bukuSelesaiBaca">Selesai dibaca</button>
+              <button class="red" id="hapusBukuBelumSelesaiBaca">
+                Hapus buku
+              </button>
+            </div>
+          </article>
         </div>
       </section>
 
@@ -76,16 +91,18 @@
         <h2>Selesai dibaca</h2>
 
         <div id="completeBookshelfList" class="book_list">
-                     <article class="book_item" id="SelesaiBaca">
-          <!--                <h3>Book Title</h3>-->
-          <!--                <p>Penulis: John Doe</p>-->
-          <!--                <p>Tahun: 2002</p>-->
+          <article class="book_item" id="SelesaiBaca">
+            <!--                <h3>Book Title</h3>-->
+            <!--                <p>Penulis: John Doe</p>-->
+            <!--                <p>Tahun: 2002</p>-->
 
-          <!--                <div class="action">-->
-          <!--                    <button class="green">Belum selesai di Baca</button>-->
-          <!--                    <button class="red">Hapus buku</button>-->
-          <!--                </div>-->
-          <!--            </article>-->
+            <div class="action">
+              <button class="green" id="bukuBelumSelesaiBaca">
+                Belum selesai dibaca
+              </button>
+              <button class="red" id="hapusBukuSelesaiBaca">Hapus buku</button>
+            </div>
+          </article>
         </div>
       </section>
     </main>
