try to solve how to make a heading of bookDatas

--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
             <p>Penulis: John Doe</p>
             <p>Tahun: 2002</p> -->
 
-            <div class="action">
+            <!-- <div class="action">
               <button class="green" id="bukuSelesaiBaca">Selesai dibaca</button>
               <button class="red" id="hapusBukuBelumSelesaiBaca">
                 Hapus buku
-              </button>
+              </button> -->
             </div>
           </article>
         </div>
@@ -96,11 +96,11 @@
             <!--                <p>Penulis: John Doe</p>-->
             <!--                <p>Tahun: 2002</p>-->
 
-            <div class="action">
+            <!-- <div class="action">
               <button class="green" id="bukuBelumSelesaiBaca">
                 Belum selesai dibaca
-              </button>
-              <button class="red" id="hapusBukuSelesaiBaca">Hapus buku</button>
+              </button> -->
+              <!-- <button class="red" id="hapusBukuSelesaiBaca">Hapus buku</button> -->
             </div>
           </article>
         </div>
