Mengikuti step-step di dicoding dalam membuat shelfbook-app
baru sampai tahap awal makeTodo

--- a/index.html
+++ b/index.html
@@ -105,8 +105,24 @@
           </article>
         </div>
       </section>
+
+    <table border="1">  
+    <thead>
+      <th>Id</th>
+      <th>Judul Buku</th>
+      <th>Penulis Buku</th>
+    </thead>
+    <tbody>
+      <tr>
+        <td>23</td>
+        <td>Inilah Aku</td>
+        <td>Anto</td>
+      </tr>
+    </tbody>
+  </table>
+    
     </main>
 
-    <script src="experiment.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
