--- a/index.html
+++ b/index.html
@@ -128,6 +128,6 @@
       </table>
     </main>
 
-    <script src="main.js"></script>
+    <script src="dicoding-way.js"></script>
   </body>
 </html>
