--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <h2>Cari Buku (Opsional)</h2>
         <form id="searchBook">
           <label for="searchBookTitle">Judul</label>
-          <input id="searchBookTitle" type="text" />
+          <input id="searchBookTitle" type="text" name="searchBookTitle" />
           <button id="searchSubmit" type="submit">Cari</button>
         </form>
       </section>
